fix: flex-start align all orgs cards container

--- a/client/components/css/AllOrgs.module.css
+++ b/client/components/css/AllOrgs.module.css
@@ -20,7 +20,7 @@
 .allOrgsContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 1em;
   width: 900px;
   height: 660px;
